--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -4,36 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:ignore="ContentDescription">
 
-    <!--<android.support.v7.widget.CardView-->
-        <!--android:id="@+id/card_view1"-->
-        <!--android:layout_width="181dp"-->
-        <!--android:layout_height="162dp"-->
-        <!--android:layout_gravity="center"-->
-        <!--android:layout_marginStart="8dp"-->
-        <!--android:layout_marginTop="24dp"-->
-        <!--android:layout_marginBottom="8dp"-->
-        <!--app:cardCornerRadius="6dp"-->
-        <!--android:src="@mipmap/first_launcher_foreground"-->
-        <!--app:contentPadding="4dp"-->
-        <!--app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--app:layout_constraintStart_toStartOf="parent"-->
-        <!--app:layout_constraintTop_toTopOf="parent">-->
-
-        <!--&lt;!&ndash;<ImageView&ndash;&gt;-->
-            <!--&lt;!&ndash;android:id="@+id/imageView3"&ndash;&gt;-->
-            <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
-            <!--&lt;!&ndash;android:layout_height="match_parent" />&ndash;&gt;-->
-            <!--&lt;!&ndash;&lt;!&ndash;android:background="@drawable/laptops" />&ndash;&gt;&ndash;&gt;-->
-
-        <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="Electronics"/>-->
-            <!--&lt;!&ndash;android:textColor="@color/google_text" />&ndash;&gt;-->
-
-    <!--</android.support.v7.widget.CardView>-->
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view4"
@@ -82,7 +55,7 @@
             android:text="ALL TTIME"
             android:textSize="20sp"
             android:textColor="@color/main_text"/>
-        <!--android:textColor="@color/google_text" />-->
+
 
     </android.support.v7.widget.CardView>
 
